2.5-0 (3/18/2016)
-----
Updated to wpp2015.

Added fixed.mx and fixed.pasfr to pop tab.

2.4-0/1 (4/28/2014)
-----
Aggregation updated to match bayesPop 5.0-0.

Inputs for pop projection extended to prob. migration inputs.

Small bug fixes.

2.3-2 (7/22/2013)
-----
A few dependencies moved to Imports.

2.3-1 (7/22/2013)
-----
Setting 2012 as new default for wpp year. Adding wpp2012 into dependencies.

2.3-0 (05/24/2013)
-----
Changes due to putting wpp data into wppXXXX packages.

2.2-1 (04/06/2013)
-----
.find.package replaced by find.package.

2.2-0 (02/16/2013)
-----
Phase III stuff added to TFR tabs. 

2.1-1 (12/19/2012)
-----
Compression entry added to TFR and e0 MCMCs.

2.1-0 (12/02/2012)
-----
Expressions added to populations tabs.

Plot by age added to Pop trajectories.

Maps now possible for population projections.

2.0-0 (10/12/2012)
-----
Many internal changes.

Appearance changed (color, GUI blocks, etc.)

Status bar added to tabs that launch time expensive processes. 

1.7-0 (06/06/2012)
-----
In the Population Projection tab - results - pyramids: Modified to reflect changes in the bayesPop
package. Mainly putting multiple years into pyramid plots.

Population Projection tab - results: Added an aggregation droplist. It can now deal with predictions that are aggregations. 

1.6-1 (05/17/2012)
-----
Fixed warnings in Results tabs about non-existing predictions.

In the Population Projection tab - results - pyramids: Added option for including a comparison year 
into the pyramid.

1.6-0 (05/03/2012)
-----
In the Life Expectancy tab - results - trajectories: Added options of plotting 
marginal and joint distribution of female-male e0.

1.5-1 (04/13/2012)
-----
Partial argument 'cont' to gwidgets functions replaced by 'container'. 

1.5-0 (04/12/2012)
-----
Tab for joint female-male prediction added to the e0-prediction tab.

e0-results tabs (trajectories and maps) have a menu for selecting the sex.

1.4-0 (11/17/2011)
-----