@@ -3,7 +3,7 @@ export(
     bayesDem.go
     )
 import(#"cairoDevice", 
-		"wpp2012", "RGtk2", gWidgets, gWidgetsRGtk2, bayesTFR, bayesLife, bayesPop)
+		"wpp2015", "RGtk2", gWidgets, gWidgetsRGtk2, bayesTFR, bayesLife, bayesPop)
 
 
 
